--- a/cost_estimator.html
+++ b/cost_estimator.html
@@ -24,10 +24,10 @@
            <div class="collapse navbar-collapse" id="navbarSupportedContent">
                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cost_estimator.html">Overnight Stay</a>
+                        <a class="nav-link active" href="#">Overnight Stay</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Dining</a>
@@ -44,8 +44,13 @@
    </nav>   
 
    <main>
-    <p>Hello</p>
+    <div class="container">
+        <form action="" id="costForm">
+
+        </form>
+    </div>
    </main>
+
 
     <!-- JavaScript -->
     <script src="scripts/script.js"></script>
