--- a/cost_estimator.html
+++ b/cost_estimator.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-   <nav class="navbar navbar-expand-lg">
+   <nav class="navbar sticky-top navbar-expand-lg">
        <div class="container-fluid">
            <a class="navbar-brand" href="#">Resort</a>
            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -46,7 +46,65 @@
    <main>
     <div class="container">
         <form action="" id="costForm">
+            <h1>Estimate Calculator</h1>
+            <hr>
+            <label for="name">Name:</label>
+            <input type="text" id="name" class="form-control" placeholder="Please enter your name">
+            <label for="email">Email address:</label>
+            <input type="text" id="email" class="form-control" placeholder="Please enter your email">
 
+            <label for="checkindate">Check-in date</label>
+            <input type="date" name="checkindate" class="form-control" id="checkin">
+            <label for="days">Number of days: (1-28)</label>
+            <input type="number" id="days" class="form-control" min="1" max="28">
+            <label for="adults">Number of adults: (1-4)</label>
+            <input type="number" id="adults" class="form-control" min="1" max="4">
+            <label for="children">Number of children: (0-4)</label>
+            <input type="number" id="children" class="form-control" min="0" max="4">
+
+            <fieldset>
+                <legend>Room type:</legend>
+                <input type="radio" id="roomtype1" name="roomtype" value="Queen">
+                <label for="roomtype1">Queen</label>
+                <input type="radio" id="roomtype2" name="roomtype" value="King">
+                <label for="roomtype2">King</label>
+                <input type="radio" id="roomtype3" name="roomtype" value="2bed">
+                <label for="roomtype3">2-bedroom Suite</label>
+            </fieldset>
+
+            <fieldset>
+                <legend>Discount options:</legend>
+                <input type="radio" id="discount1" name="discount" value="None">
+                <label for="discount1">None</label>
+                <input type="radio" id="discount2" name="discount" value="AA">
+                <label for="discount2">AAA/ Senior</label>
+                <input type="radio" id="discount3" name="discount" value="Military">
+                <label for="discount3">Military</label>
+            </fieldset>
+
+            <!-- Button -->
+            <button id="btnCalculate" onclick="calculateRoomPrice()">Calculate</button>
+            <hr>
+            <div id="displayCost">
+                <div id="displayOrigRoomCost">
+                    Room cost: XXX.XX
+                </div>
+                <div id="displayDiscount">
+                    Discount amount: -XX.XX
+                </div>
+                <div id="displayDiscountCost">
+                    Discounted room cost: XXX.XX
+                </div>
+                <div id="displayTax">
+                    Tax: XX.XX
+                </div>
+                <div id="displayTotalWithTax">
+                    Total cost incl. tax: XXX.XX
+                </div>
+            </div>
+
+            <!-- Button -->
+            <button type="submit" id="btnSubmit">Submit</button>            
         </form>
     </div>
    </main>
