--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-   <nav class="navbar sticky-top navbar-expand-lg">
-       <div class="container-fluid">
-           <a class="navbar-brand" href="#">Resort</a>
-           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+    <nav class="navbar sticky-top navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Resort</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
-           </button>
-           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Home</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="cost_estimator.html">Overnight Stay</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Dining</a>
+                        <a class="nav-link" href="dining.html">Dining</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Car Rental</a>
@@ -38,14 +38,22 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Activities</a>
                     </li>
-               </ul>
-           </div>
-       </div>
-   </nav>   
+                </ul>
+            </div>
+        </div>
+    </nav>   
 
-   <main>
-    <p>Hello</p>
-   </main>
+    <!-- Looping video header -->
+    <header>
+        <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+            <source src="/images/resort-video.mp4" type="video/mp4">
+        </video>
+    </header>
+
+    <!-- Content -->
+    <main>
+
+    </main>
 
     <!-- JavaScript -->
     <script src="scripts/script.js"></script>
