Updated index.html and style.css
Added images and text in index page, updated css

--- a/index.html
+++ b/index.html
@@ -52,7 +52,25 @@
 
     <!-- Content -->
     <main>
-
+        <div class="container mt-5 mb-5">
+            <div class="row">
+                <div class="col">
+                    <img src="/images/resort-image01.jpg" alt="Photo of resort pool and chairs.">
+                </div>
+                <div class="col">
+                   <p>Welcome to our luxurious resort, where relaxation and adventure meet in perfect harmony. Situated in a stunning location surrounded by nature, our resort offers breathtaking views and world-class amenities.</p>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col">
+                    <p>Whether you want to unwind in our spa, take a dip in our pool, explore the great outdoors with our guided tours, or indulge in gourmet dining, we have everything you need for an unforgettable getaway. Come escape the hustle and bustle of everyday life and experience pure bliss at our resort.</p>
+                </div>
+                <div class="col">
+                    <img src="/images/resort-image02.jpg" alt="Night time photo of resort jetty with huts.">
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- JavaScript -->
