--- a/cost_estimator.html
+++ b/cost_estimator.html
@@ -43,6 +43,7 @@
        </div>
    </nav>   
 
+   <!-- Calculator -->
    <main>
     <div class="container">
         <form action="" id="costForm">
